--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
     <p>1. Round each element to 2 decimal places using toFixed()</p>
     <ul>
       <li>INPUT: [12.345, 67.890, 34.567]</li>
-      <li>OUTPUT:</li>
+      <li>OUTPUT:[12.35, 67.89, 34.57]</li>
     </ul>
     <a href="toFixed.html">toFixed</a><br /><br />
     <p>2. Convert each element to an integer using parseInt()</p>
     <ul>
       <li>INPUT: ['123abc', '456def', '789ghi']</li>
-      <li>OUTPUT:</li>
+      <li>OUTPUT:[123, 456, 789]</li>
     </ul>
     <a href="parseInt.html">parseInt</a><br /><br />
     <p>3. Check if each element is an integer using isInteger()</p>
     <ul>
       <li>INPUT: [12, 34.56, 78, 90.12]</li>
-      <li>OUTPUT:</li>
+      <li>OUTPUT:[true, false, true, false]</li>
     </ul>
     <a href="isInteger.html">isInteger</a><br /><br />
     <p>4. Check if each element is NaN (Not a Number) using isNaN()</p>
     <ul>
       <li>INPUT: ['abc', 123, 'def', 456]</li>
-      <li>OUTPUT:</li>
+      <li>OUTPUT:[true, false, true, false]</li>
     </ul>
     <a href="isNaN.html">isNaN</a><br /><br />
     <p>
@@ -36,7 +36,7 @@
     </p>
     <ul>
       <li>INPUT: [123.456, 789.012, 345.678]</li>
-      <li>OUTPUT:</li>
+      <li>OUTPUT:[123.5 ,789.0 ,345.7]</li>
     </ul>
     <a href="toPrecision.html">toPrecision</a><br /><br />
     <p>6. Generate random otp 5 digit num using math.random</p>
