--- a/isInteger.html
+++ b/isInteger.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        
+      a = [12, 34.56, 78, 90.12];
+      y = a.map((a) => {
+        return Number.isInteger(a) + "  ";
+      });
+      alert(y);
     </script>
-</body>
+  </body>
 </html>
