--- a/toFixed.html
+++ b/toFixed.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        
+      a = [12.345, 67.89, 34.567];
+      y = a.map((a) => {
+        return a.toFixed(2) + "   ";
+      });
+      alert(y);
     </script>
-</body>
+  </body>
 </html>
